# flo-league

./: .env  .env.example  .gitignore  Dockerfile  README.md  after_build.bat  babel.cfg  docker-compose.yml  main.py  package.json  requirements.txt  tailwind.config.js  update_db.py  update_players.py
app/: __init__.py  admin.py  config.py  constants.py  enums.py  extensions.py  helpers.py  jwt_loader.py  models.py  utils.py
app/api/: helpers.py  matchmaking.py  (+1 more)
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  cli.py  docker-compose.dev.yml  main.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: d43ab8999a19_.py  d983b3c607c3_.py
backend/src/: auth.py  crypt.py  enums.py  exceptions.py  lifespan.py  main.py  openapi.py
backend/src/api/: deps.py
backend/src/api/routes/: auth.py  matches.py  players.py  rounds.py  seasons.py
backend/src/db/: mixins.py  models.py  session.py
backend/src/schemas/: matches.py  players.py  rounds.py  seasons.py  user.py
backend/src/services/: elo.py  match_making.py  match_service.py  player_service.py  round_service.py  season_service.py  user_service.py
backend/tests/: conftest.py  seeds.py  test_matches.py  test_player_import.py  test_rounds.py
backend/tests/artifacts/: players1.csv  players2.csv
docs/: matchmaking_algorithm.drawio
frontend/: .env.example  .prettierignore  Dockerfile  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
public/: index.html
src/: App.jsx  auth.js  breakpoint.js  fetch.js  helpers.js
(+218 files in other folders)
