[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.128.4",
    "fastapi-login>=1.10.3",
    "gunicorn>=25.1.0",
    "passlib[argon2]>=1.7.4",
    "psycopg[binary]>=3.3.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.46",
    "typer>=0.24.1",
    "uvicorn>=0.40.0",
]
